# OpenUtau

cpp/: BUILD_INSTRUCTIONS.md  BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  COMPILATION_SUMMARY.md  FINAL_SUMMARY.md  INSTALL_BAZEL.md  MODULE.bazel  MODULE_simple.bazel  README_WASM.md  README_dependencies.md  WORKSPACE.bazel  WORKSPACE_complete.bazel  WORKSPACE_local.bazel  apply_complete_patches.ps1  apply_patches.ps1  apply_patches_simple.ps1  build_all.bat  build_linux.sh  build_mac.sh  build_wasm.bat  build_wasm_simple.bat  build_wasm_simple.ps1  build_win.bat  build_worldline.ps1  build_worldline_workspace.ps1  copy_build_output.ps1  dependencies_summary.md  download_dependencies.bat  download_dependencies.ps1  download_deps.ps1  download_manual.ps1  download_workspace_deps.ps1  setup_and_build.bat  setup_local_builds.ps1  simple_download.ps1  verify_build.ps1  wasm_example.html
cpp/dependencies/abseil-cpp/: BUILD.bazel
cpp/dependencies/googletest/: BUILD.bazel
cpp/dependencies/libpyin/: common.h  pyin.c
cpp/dependencies/spline/src/: spline.h
cpp/dependencies/world/src/: d4c.cpp  synthesis.cpp
cpp/dependencies/world/src/world/: synthesis.h
cpp/dependencies/xxhash/: BUILD.bazel
cpp/output/: worldline.if.lib
cpp/worldline/: BUILD.bazel  BUILD_local.bazel  worldline_wasm_wrapper.cpp
cpp/worldline/classic/: BUILD.bazel
cpp/worldline/f0/: frq_estimator.cpp  pyin_estimator.cpp
