# OpenUtau C++ WORKSPACE with all local dependencies

# abseil-cpp依赖的远程仓库
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "com_google_googletest",
  sha256 = "8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7",
  strip_prefix = "googletest-1.14.0",
  urls = ["https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz"],
)

http_archive(
    name = "com_googlesource_code_re2",
    sha256 = "828341ad08524618a626167bd320b0c2acc97bd1c28eff693a9ea33a7ed2a85f",
    strip_prefix = "re2-2023-11-01",
    urls = ["https://github.com/google/re2/releases/download/2023-11-01/re2-2023-11-01.zip"],
)

http_archive(
    name = "com_github_google_benchmark",
    sha256 = "6bc180a57d23d4d9515519f92b0c83d61b05b5bab188961f36ac7b06b0d9e9ce",
    strip_prefix = "benchmark-1.8.3",
    urls = ["https://github.com/google/benchmark/archive/refs/tags/v1.8.3.tar.gz"],
)

http_archive(
  name = "bazel_skylib",
  sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
  urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz"],
)

http_archive(
    name = "platforms",
    sha256 = "8150406605389ececb6da07cbcb509d5637a3ab9a24bc69b1101531367d89d74",
    urls = ["https://github.com/bazelbuild/platforms/releases/download/0.0.8/platforms-0.0.8.tar.gz"],
)

# 本地依赖
local_repository(
    name = "abseil-cpp",
    path = "dependencies/abseil-cpp",
)

local_repository(
    name = "absl",
    path = "dependencies/abseil-cpp",
)

local_repository(
    name = "googletest",
    path = "dependencies/googletest",
)

local_repository(
    name = "xxhash",
    path = "dependencies/xxhash",
)

# WORKSPACE.bazel dependencies
local_repository(
    name = "libgvps",
    path = "dependencies/libgvps",
)

local_repository(
    name = "libnpy",
    path = "dependencies/libnpy",
)

local_repository(
    name = "libpyin",
    path = "dependencies/libpyin",
)

local_repository(
    name = "spline",
    path = "dependencies/spline",
)

local_repository(
    name = "world",
    path = "dependencies/world",
)

local_repository(
    name = "miniaudio",
    path = "dependencies/miniaudio",
) 