# OpenUtau C++ WORKSPACE with local dependencies
load("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

# Use local dependencies instead of http_archive
local_repository(
    name = "abseil-cpp",
    path = "dependencies/abseil-cpp",
)

local_repository(
    name = "googletest",
    path = "dependencies/googletest",
)

local_repository(
    name = "xxhash",
    path = "dependencies/xxhash",
)

local_repository(
    name = "libgvps",
    path = "dependencies/libgvps",
)

local_repository(
    name = "libnpy",
    path = "dependencies/libnpy",
)

local_repository(
    name = "libpyin",
    path = "dependencies/libpyin",
)

local_repository(
    name = "spline",
    path = "dependencies/spline",
)

local_repository(
    name = "world",
    path = "dependencies/world",
)

local_repository(
    name = "miniaudio",
    path = "dependencies/miniaudio",
) 