package(default_visibility = ["//visibility:public"])

cc_library(
    name = "gtest",
    srcs = glob([
        "googletest/src/*.cc",
        "googlemock/src/*.cc",
    ]),
    hdrs = glob([
        "googletest/include/gtest/*.h",
        "googlemock/include/gmock/*.h",
    ]),
    includes = [
        "googletest/include",
        "googlemock/include",
    ],
)

cc_library(
    name = "gtest_main",
    srcs = ["googletest/src/gtest_main.cc"],
    deps = [":gtest"],
)
